# algebra

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  justfile  pyproject.toml  ruff.toml  script_fft.py  script_poly_mul.py  test.py
.github/workflows/: ci.yml
algebra/bigint/: __init__.py  bigint.py
algebra/ec/: __init__.py  bn254.py  curve.py  curve25519.py  registry.py  secp256k1.py  secp256r1.py  secp384r1.py  secp521r1.py
algebra/ec/tests/: README.md  __init__.py  run_tests.py  test_bn254.py  test_curve25519.py  test_interoperability.py  test_nist_curves.py  test_registry.py  test_secp256k1.py  test_secp256r1.py  test_simple.py
algebra/extensions/: extension_field.py  gf2n.py
algebra/ff/: babybear.py  bigint.py  bigint_field.py  gf2.py  m31.py  prime_field.py  test_field.py
algebra/linalg/: solve.py
algebra/poly/: __init__.py  fft.py  ntt.py  univariate.py
bench/: poly_mul.py
tests/: test_bigint.py  test_curves.py  test_ec.py  test_extensions.py  test_ff.py  test_ff_core.py  test_gf2.py  test_linalg.py  test_poly.py
tinycrypto/ff/: babybear.py  m31.py  prime_field.py  test.py
tinycrypto/poly/: univariate.py
